--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         .banner{
             height: 64vh;
             width: 90%;
-            background-image: url(2.jpeg);
+            background-image: url(image/2.jpeg);
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
@@ -210,33 +210,7 @@
         .footer a:hover{
             color: black;
         }
-            /* ----------- Responsive Design ----------- */
-
-                /* Tablets (768px and down) */
-                @media (max-width: 1080px) {
-                  .logo{
-                    text-align: center;
-                    
-                    .head{
-                        height: 100vh;
-                    }
-                    #search{
-                        font-size: 1px;
-                    }
-                    .menu{
-                        border: 1px solid transparent;
-                        margin-left: 200px;
-                    }
-                    .mic{
-                        margin-top: 50px;
-                    }
-                  }
-                }
-
-                /* Mobile phones (480px and down) */
-                @media (max-width: 480px) {
-                }
-
+           
     </style>
 </head>
 <body>
