--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             </div>
             <div class="menu">
                 <ul>
-                   <li><a href="#">Home</a></li>
-                   <li><a href="#">Shop</a></li>
+                   <li><a href="home.html">Home</a></li>
+                   <li><a href="shop.html">Shop</a></li>
                    <li><a href="#">Blog</a></li>
                    <li><a href="#">Contact</a></li>
                 </ul>
